[project]
name = "question-commons"
description = "A public CC0 commons of questions from /idk cycles."
requires-python = ">=3.8"
license = { text = "CC0-1.0" }
dynamic = ["version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
